--- a/main.css
+++ b/main.css
@@ -1193,7 +1193,26 @@ h5 {
 		}
 	
 		.navbar-nav-top {
+			animation: fade-in .2s linear;
 			margin-top: 100px;
+			background-color: rgba(0, 0, 49, 0.5);
+		}
+
+		.navbar-nav-bottom {
+			animation: fade-in .2s linear;
+			position: relative;
+			background-color: rgba(0, 0, 49, 0.5);
+		}
+
+		.navbar-nav-bottom::after {
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 100%;
+			background-color: '';
+			box-shadow: 10px 2px 10px 3px rgba(0, 0, 0, 0.75);
+			top: calc(100% - 1px);
+			left: 0;
 		}
 	
 		.navbar-logo {
@@ -1607,11 +1626,30 @@ h5 {
 			flex-direction: column;
 			width: max-content;
 			margin-left: auto;
-			margin-right: 5%;
+			margin-right: 0;
 		}
 	
 		.navbar-nav-top {
+			animation: fade-in .2s linear;
 			margin-top: 100px;
+			background-color: rgba(0, 0, 49, 0.5);
+		}
+
+		.navbar-nav-bottom {
+			animation: fade-in .2s linear;
+			position: relative;
+			background-color: rgba(0, 0, 49, 0.5);
+		}
+
+		.navbar-nav-bottom::after {
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 100%;
+			background-color: '';
+			box-shadow: 10px 2px 10px 3px rgba(0, 0, 0, 0.75);
+			top: calc(100% - 1px);
+			left: 0;
 		}
 	
 		.navbar-logo {
@@ -1619,7 +1657,7 @@ h5 {
 		}
 	
 		.navbar-nav .nav-item {
-			width: 150px;
+			width: 200px;
 		}
 	
 		.navbar-nav .nav-item .nav-link {
@@ -2231,4 +2269,9 @@ h1 {
 @keyframes page-transition-index {
     from {margin-top: 1000px}
     to {margin-top: 0px}
+}
+
+@keyframes fade-in {
+	from {opacity: 0}
+    to {opacity: 1}
 }
