--- a/main.css
+++ b/main.css
@@ -1069,7 +1069,7 @@ h5 {
 			height: 53px;
 		}
 
-		.navbar{
+		.navbar {
 			height: 105px;
 			display: block;;
 			margin-left: auto;
@@ -1086,7 +1086,7 @@ h5 {
 	
 		.navbar .navbar-toggle {
 			padding: 0;
-			width: max-content;
+			width: 40px;
 			margin-left: 0;
 			margin-top: 25px;
 			height: 40px;
@@ -1525,7 +1525,7 @@ h5 {
 	
 		.navbar .navbar-toggle {
 			padding: 0;
-			width: max-content;
+			width: 40px;
 			margin-left: 0;
 			margin-top: 25px;
 			height: 40px;
