--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@ body {
 	margin: 0;
 	background-color: #000529;
 }
+.box {
+	display: none;
+}
 	
 
 h1 {
@@ -755,6 +758,9 @@ a:hover{
 /*TABLET VIEW MD*/
 
 @media (min-width:768px) and (max-width:991px){
+	.box {
+		display: none;
+	}
 	
 	
 .navbar-nav .nav-item .nav-link {
@@ -1063,6 +1069,9 @@ h5 {
 	/*MOBILE VIEW SM*/
 	
 	@media (min-width:576px) and (max-width:767px){
+		.box {
+			display: none;
+		}
 	
 		.logo {
 			width: 60px;
@@ -1261,6 +1270,10 @@ h5 {
 		}
 		h5 {
 			font-size: 20px;
+		}
+
+		.box {
+			display: none;
 		}
 		
 		
@@ -1499,6 +1512,10 @@ h5 {
 	/*MOBILE VIEW XS*/
 	
 	@media (max-width: 575px){
+		.box {
+			display: none;
+		}
+
 		.logo {
 			margin-left: 5vw;
 			width: 60px;
@@ -2001,6 +2018,9 @@ h5 {
 /*SMALL DESKTOP VIEW LG*/
 
 @media (min-width: 992px) and (max-width: 1199px){
+	.box {
+		display: none;
+	}
 	
 h1 {
 	font-size: 67px;
@@ -2171,6 +2191,9 @@ display: none;
 
 
 @media (min-width: 1200px) and (max-width: 1366px){
+	.box {
+		display: none;
+	}
 .container-fluid.hero-img {
 	background-size: cover;
 	background-position: center center;
