--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 body {
 	padding-top: 70px;
 	margin: 0;
-	/* background-color: #000529; */
+	background-color: #000529;
 }
 .box {
 	display: none;
