Add fade animation to hero image

--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@ body {
 }
 .box {
 	display: none;
+	animation: fade-in .9s linear;
+
 }
 	
 
@@ -760,6 +762,7 @@ a:hover{
 @media (min-width:768px) and (max-width:991px){
 	.box {
 		display: none;
+		animation: fade-in .9s linear;
 	}
 	
 	
@@ -1071,6 +1074,7 @@ h5 {
 	@media (min-width:576px) and (max-width:767px){
 		.box {
 			display: none;
+			animation: fade-in .9s linear;
 		}
 	
 		.logo {
@@ -1274,6 +1278,7 @@ h5 {
 
 		.box {
 			display: none;
+			animation: fade-in .9s linear;
 		}
 		
 		
@@ -1514,6 +1519,7 @@ h5 {
 	@media (max-width: 575px){
 		.box {
 			display: none;
+			animation: fade-in .9s linear;
 		}
 
 		.logo {
@@ -2020,6 +2026,7 @@ h5 {
 @media (min-width: 992px) and (max-width: 1199px){
 	.box {
 		display: none;
+		animation: fade-in .9s linear;
 	}
 	
 h1 {
@@ -2193,6 +2200,7 @@ display: none;
 @media (min-width: 1200px) and (max-width: 1366px){
 	.box {
 		display: none;
+		animation: fade-in .9s linear;
 	}
 .container-fluid.hero-img {
 	background-size: cover;
